# iso639

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml  setup.py
.circleci/: config.yml
scripts/: create_languages_db.py
src/iso639/: __init__.py  language.py  languages.db
tests/: test_language.py  test_version_number.py
