[build-system]
requires = ["setuptools >= 65.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-iso639"
version = "2023.12.11"
description = "Look-up utilities for ISO 639 language codes and names"
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "Apache 2.0" }
authors = [ { name = "Jackson L. Lee", email = "jacksonlunlee@gmail.com" } ]
keywords = ["ISO 639", "language codes", "languages", "linguistics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = [
    "black == 23.11.0",
    "build == 1.0.3",
    "flake8 == 6.1.0",
    "pytest == 7.4.3",
    "twine == 4.0.2",
]

[project.urls]
source = "https://github.com/jacksonllee/iso639"
tracker = "https://github.com/jacksonllee/iso639/issues"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
package-data = { "iso639" = ["languages.db"] }

[tool.pytest.ini_options]
addopts = "-vv --durations=0 --strict-markers"
testpaths = [ "tests" ]
